# epistemic-engine

./: .dockerignore  .env.example  .epistemic.example.yaml  .gcloudignore  .gitignore  Makefile  README.md  compose.yaml  go.mod  go.work
.github/workflows/: ci.yml  deploy-gcp.yml
adapters/artifact/: artifact.go  artifact_test.go
adapters/github-action/: README.md  action.yml  publish.mjs
adapters/junit/: junit.go
adapters/mcp/: server.py
adapters/openai-agents/: epistemic_agents_adapter.py
adapters/react/: README.md  package-lock.json  package.json  tsconfig.json
adapters/sarif/: sarif.go
agents/demo-agent/: README.md  pyproject.toml
agents/demo-agent/src/epistemic_demo_agent/: __init__.py  exporter.py  main.py  tracing.py
api/go/: canonical.go  event_json.go  provider.go  report.go  report_test.go  types.go  types_test.go  validate.go
apps/control-plane/: Dockerfile  go.mod  go.sum
apps/web/: Dockerfile  package-lock.json  package.json
cmd/epistemic/: README.md  main.go  main_test.go
cmd/epistemic-relay/: main.go  main_test.go
conformance/: README.md
conformance/fixtures/: block-request.json  canonical.json  duplicate-batch.json  invalid-event.json  (+3 more)
demo/: corrected-orders.patch  verification-spec.json
deploy/: docker-compose.yml  relay.example.yaml
docs/: architecture.md  development.md
release/: v0.1.json
schemas/: README.md
scripts/: run-submission-proof.ps1  submission-openai-proof.mjs
specification/: CHANGELOG.md  compatibility.md  context-propagation.md  lifecycle.md  openapi-v0.1.yaml  protocol.md  relay.md
(+151 files in other folders)
