[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-demo-agent"
version = "0.1.0"
description = "OpenAI Agents SDK demo with a thin Epistemic Control Plane trace exporter"
requires-python = ">=3.10"
dependencies = ["openai-agents==0.18.2"]

[project.scripts]
epistemic-demo-agent = "epistemic_demo_agent.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
